<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kalyans.getthingsdone.EditItemActivity">

    <TextView
        android:text="@string/tvEditItem"
        android:textSize="10pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvEditItem"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/EditRadioGroup"
        android:layout_above="@+id/btnSaveItem"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="91dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPriorityHigh"
            android:text="@string/etPriorityHigh"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPriorityMedium"
            android:text="@string/etPriorityMedium"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etPriorityLow"
            android:text="@string/etPriorityLow"/>

    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="8pt"
        android:id="@+id/etEditItem"
        android:layout_above="@+id/EditRadioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp" />

    <Button
        android:text="@string/btnSaveItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="8pt"
        android:onClick="onSaveItem"
        android:id="@+id/btnSaveItem"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
