<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kalyans.getthingsdone.MainActivity">

    <Button
        android:text="@string/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="onAddItem"
        android:id="@+id/btnAddItem" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:id="@+id/lvItems" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:textSize="8pt"
        android:id="@+id/etNewItem"
        android:hint="Enter a New Item"
        android:layout_above="@+id/btnAddItem"
        android:layout_toStartOf="@+id/btnAddItem"
        android:layout_marginEnd="29dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:id="@+id/priorityHigh"
            android:text="@string/priorityHigh"/>

        <RadioButton
            android:id="@+id/priorityMedium"
            android:text="@string/priorityMedium"/>

        <RadioButton
            android:id="@+id/priorityLow"
            android:text="@string/priorityLow"/>

    </RadioGroup>

</RelativeLayout>
